# nit

./: .gitignore  CMakeLists.txt  build.sh  main.cpp
apis/: apis.cpp  apis.h
commands/: add.hpp  base.hpp  checkout.hpp  commit.hpp  help.hpp  init.hpp  log.hpp  restore.hpp  rm.hpp  status.hpp
config/: config.h
lib/: nit_colors.hpp  nit_common.hpp  nit_error.hpp  nit_fs.hpp  nit_logger.hpp  nit_types.hpp  utils.hpp
models/: blob.hpp  commit.hpp  staged.hpp  status.hpp
services/: checkout.hpp  command_factory.hpp  command_parser.hpp  commit.hpp  nit_checker.hpp  nit_repo.hpp  staged.hpp  status.hpp
unit-tester/: unit_tester.hpp
